--- a/resources.ipynb
+++ b/resources.ipynb
@@ -4,88 +4,245 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MS SQL SERVER CLASS"
+    "## SQL CLASS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aplicação de conceitos para criação, manutenção e extração de dados de um banco de dados. Não inclue projetos de bancos de dados.\n",
-    "\n",
-    "0 - O que é SQL? \n",
-    "\n",
-    "1 - Necessidade, Flavors e Elementos de um banco de dados.\n",
-    "\n",
-    "2 - Regras de Nomeação, comentários e formatação.  \n",
-    "\n",
-    "3 - Database exemplo para o curso. \n",
-    "    \n",
-    "4 - Conceitos de Normalização  \n",
-    "    \n",
-    "5 - Tipos de dados\n",
-    "\n",
-    "6 - Instruction lists to cover\n",
-    "https://www.w3schools.com/sql/sql_quickref.asp\n",
-    "https://www.w3schools.com/sql/sql_ref_sqlserver.asp\n",
-    "\n",
-    "6 - Alter operations with tables:  \n",
-    "    Create table  \n",
-    "    Alter table  \n",
-    "    \n",
-    "7 - Data operations  \n",
-    "    Insert\n",
-    "    Drop table  \n",
-    "    Truncate table   \n",
-    "    Update  \n",
-    "    Delete  \n",
-    "\n",
-    "8 - Temporary Tables and variables\n",
-    "\n",
-    "8 - Select operations\n",
-    "    AND, OR, NOT\n",
-    "    \n",
-    "9 - Synonyms\n",
-    "\n",
-    "10 - CTE\n",
-    "\n",
-    "11 - Indices em tabelas\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 0 -  SQL - Structured Query Language\n",
-    "\n",
-    "https://www.bitdegree.org/learn/what-is-sql\n",
+    "# 1 -  SQL - Structured Query Language\n",
     "\n",
     "https://www.w3schools.com/sql/sql_intro.asp\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### 1 - Necessidade flavors e Elementos de um banco de dados  \n",
+    " ## 2- Funcionalidades , \"Flavors\" e Elementos de um sistema de gerenciamento de banco de dados  (SGBD)\n",
     " \n",
-    " #### Necessidade: Armazenar dados para uma aplicação: Configuração, Cadastros, Dados transacionais e outros. \n",
-    "    \n",
-    " #### Alguns DBs mais usados hoje:\n",
-    "    * SQL - MySql (www.mysql.com) , Postgre(www.postgresql.org), SQLite(www.sqlite.org), MSSQL (https://www.microsoft.com/pt-br/sql-server/sql-server-2019), Oracle (www.oracle.com/br/index.html)\n",
-    "    \n",
-    "    * NOSQL - MariaDB, MongoDB, etc \n",
-    "    \n",
-    " #### Conteúdo padrão de um Banco de dados:\n",
+    "### 2.1 Funcionalidades: \n",
+    " \n",
+    "#### 2.1.1- Armazenar dados em Tabelas e distribuir conforme solicitado atraves de queries SQL.\n",
     "\n",
-    "    * Tables - Armazenam os dados  \n",
-    "        * Temporary Tables  \n",
+    "##### Tabelas podem conter dados de Relatórios, Configuração, Cadastros, Dados transacionais, logs e outros. \n",
+    "\n",
+    "* **Exemplo tabela de Relatório**\n",
+    "![](http://matlab.izmiran.ru/help/toolbox/database/vqb_repo.gif)\n",
+    "\n",
+    "\n",
+    "* **Exemplo tabela de Configuração** \n",
+    "![](https://wp-staging.com/wp-content/uploads/2018/04/wordpress_database_headers.png)\n",
+    "\n",
+    "\n",
+    "* **Exemplo tabela de Cadastro**\n",
+    "![](https://sites.google.com/site/ismcsrdatabase/_/rsrc/1468868690197/ismcsrdatabase3/11.png)\n",
+    "\n",
+    "\n",
+    "* **Exemplo tabela de Dados Transacionais**\n",
+    "![](https://www.analyticsvidhya.com/wp-content/uploads/2015/12/Table2.png)\n",
+    "\n",
+    "\n",
+    "* **Exemplo tabela de Logs**\n",
+    "![]()\n",
+    "\n",
+    "\n",
+    "#### 2.1.2- Garantir a consistência dos dados armazenados.\n",
+    " * Para estudo: https://www.devmedia.com.br/integridade-de-dados-parte-01/8831\n",
+    "\n",
+    "#### 2.1.3- Servir os dados quando solicitados.\n",
+    "\n",
+    " \n",
+    " \n",
+    "### 2.2- Conteúdo padrão de um Banco de dados:\n",
+    "\n",
+    "##### * Tabelas - Armazenam os dados.\n",
+    "* Cada coluna deve ter um nome e um tipo\n",
+    "\n",
+    "https://www.teach-ict.com/gcse_new/databases/terminology/miniweb/images/table.gif\n",
+    "\n",
+    "https://www.analyticsvidhya.com/wp-content/uploads/2015/12/Table2.png\n",
+    "\n",
+    "\n",
+    "##### * Relacionamentos\n",
+    "* Banco de dados: Relacionamento entre várias tabelas para garantir integridade:\n",
+    "\n",
+    "https://www.mantisbt.org/docs/master/en-US/Developers_Guide/html/images/erd.png\n",
+    "\n",
+    "http://infocenter.sybase.com/help/index.jsp?topic=/com.sybase.infocenter.dc38159.1510/html/iqintro/A112233.htm\n",
+    "\n",
+    "\n",
+    "##### * Views - Exibição de dados das tabelas calculados, formatados, filtrados e classificados.\n",
+    "\n",
+    "##### * Temporary Tables\n",
+    "\n",
+    "##### * Functions, procedures e triggers - Alteram os dados\n",
+    "\n",
+    "##### * Usuários e permissões.\n",
+    "\n",
+    " \n",
+    "\n",
+    "#### Alguns DBs (SGBD) mais usados hoje:\n",
+    "\n",
+    "**SQL**\n",
+    "\n",
+    "* SQL - MySql (www.mysql.com)\n",
+    "* Postgre(www.postgresql.org)\n",
+    "* SQLite(www.sqlite.org) \n",
+    "* MSSQL (https://www.microsoft.com/pt-br/sql-server/sql-server-2019)\n",
+    "* Oracle (www.oracle.com/br/index.html), etc.\n",
+    "    \n",
+    "**NOSQL**\n",
+    "\n",
+    "* MongoDB (www.mongodb.com), etc.\n",
+    "    \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3 - Conceitos de Normalização\n",
+    "\n",
+    "#### A Normalização é necessária para evitar redundâncias e garantir a integridade de dados armazenados em TABELAS de um banco de dados.\n",
+    "\n",
+    "[ver excel normalizacao_exercicio.xlsx]\n",
+    "\n",
+    "https://medium.com/@diegobmachado/normaliza%C3%A7%C3%A3o-em-banco-de-dados-5647cdf84a12\n",
+    "\n",
+    "https://www.sqlshack.com/what-is-database-normalization-in-sql-server/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4 - Best Pratices for naming\n",
+    "\n",
+    "\n",
+    "#### Reasons for using a naming convention / comments\n",
+    "* SQL é uma linguagem de programação. Um código é escrito uma vez por 1 pessoa e lido muitas vezes por muitas pessoas.\n",
+    "\n",
+    "* To reduce the effort needed to read and understand source code.\n",
+    "* To enable code reviews to focus on more important issues than arguing over syntax and naming standards.\n",
+    "* To enable code quality review tools to focus their reporting mainly on significant issues other than syntax and style preferences.\n",
+    "* To enable an easy workteam, its necessary some conventions.\n",
+    "\n",
+    "##### 4.1 - Comentar o seu código:\n",
+    "* Explicar o que seu código faz em termos do negócio;\n",
+    "* Comentar alterações em um código em produção;\n",
+    "* Documentar decisões.\n",
+    "\n",
+    "##### 4.2 - Padronizar formas de escrita:\n",
+    "\n",
+    "**_Tabelas, views,etc:**\n",
+    "\n",
+    "1- Não usar letras Maiúsculas (lowercase).\n",
+    "\n",
+    "2- Nomes que explicam o que o objeto faz:\n",
+    "\n",
+    "    Tabela \"product\", procedure \"apply_discount_adjustment\", view: \"produtos_inativos\", etc.\n",
+    "    \n",
+    "3- Usar underscore _ no lugar no espaço.\n",
+    "\n",
+    "4- Não usar acentos. Dê preferência para palavras em inglês.\n",
+    "\n",
+    "5- Tabelas e Procedures - não usar plural.\n",
+    "\n",
+    "**_SQL commands**\n",
+    "\n",
+    "1- Usar comandos em Maiusculo (UPPERCASE)\n",
+    "\n",
+    "source: https://www.sqlstyle.guide/pt-br/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5 - Tipos de dados\n",
+    "\n",
+    "####  Básico:\n",
+    "\n",
+    "https://www.w3schools.com/sql/sql_datatypes.asp\n",
+    "\n",
+    "#### Detalhado:\n",
+    "\n",
+    "https://docs.microsoft.com/pt-br/sql/t-sql/data-types/ntext-text-and-image-transact-sql?view=sql-server-ver15  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6- Instruções\n",
+    "\n",
+    "#### Comments\n",
+    "--\n",
+    "/**/\n",
+    "\n",
+    "#### Select\n",
+    "Select * from\n",
+    "Select field1, field2 \n",
+    "Aliases as\n",
+    "Select Top / percent\n",
+    "Select Distinct\n",
+    "\n",
+    "#### Filters\n",
+    "Where\n",
+    "And, Or, Not\n",
+    "Null Values\n",
+    "isnull\n",
+    "Like\n",
+    "Wildcards\n",
+    "In\n",
+    "Between\n",
+    "Having\n",
+    "Exists\n",
+    "Any, All\n",
+    "\n",
+    "#### Order\n",
+    "Order By\n",
+    "\n",
+    "#### Agregators / Grouping / summary\n",
+    "Group By\n",
+    "Min and Max\n",
+    "Count, Avg, Sum\n",
+    "\n",
+    "#### Conditionals\n",
+    "Case When\n",
+    "\n",
+    "#### Joins\n",
+    "Inner Join\n",
+    "Left Join\n",
+    "Right Join\n",
+    "Full Join\n",
+    "\n",
+    "#### Unions\n",
+    "Union\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Future\n",
+    "\n",
+    "###7 - DBs de exemplo.\n",
+    "\n",
+    "https://github.com/pleasereleaseme/ContosoUniversity/tree/master/ContosoUniversity.Database/dbo/Tables\n",
+    "\n",
     "    * Functions - Altera dados / Faz cálculos  \n",
     "        * Custom Functions  \n",
     "        * SQL server Functions  \n",
     "    * Procedures - Execução de código para alterar dados de uma tabela.  \n",
     "    * Triggers - Execução de procedure quando os dados de uma tabela são alterados.  \n",
-    "    * Views - exibição de dados das tabelas calculados, formatados, filtrados e classificados.  \n",
+    "     \n",
     "    * Usuários e permissões:  \n",
     "        Usuários do banco e do domínio \n",
     "        SA - system admin  \n",
@@ -93,6 +250,7 @@
     "        ALTER permissions  \n",
     "        SELECT permissions  \n",
     "        WRITE permissions  \n",
+    "        \n",
     "\n",
     "\n",
     "#### DML (Linguagem de Manipulação de Dados) – É um conjunto de instruções usada nas consultas e modificações dos dados armazenados nas tabelas do banco de dados.\n",
@@ -154,217 +312,7 @@
     "\n",
     "ROLLBACK -> Este comando restaura o banco de dados para o último estado commited.\n",
     "\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2 - Regras de Nomeação\n",
-    "\n",
-    "Reasons for using a naming convention (as opposed to allowing programmers to choose any character sequence) \n",
-    "include the following:\n",
-    "\n",
-    "    To reduce the effort needed to read and understand source code.\n",
-    "    To enable code reviews to focus on more important issues than arguing over syntax and naming standards.\n",
-    "    To enable code quality review tools to focus their reporting mainly on significant issues other than syntax and style preferences.\n",
-    "    \n",
-    "    Tabelas, views,etc:\n",
-    "        * Todos os elementos são nomeados conforme a seguir:\n",
-    "        [ServerName].[database_name].[schema].[element_name]\n",
-    "\n",
-    "    Algumas regras gerais:\n",
-    "        1- Nomes que explicam o que o objeto faz:\n",
-    "            Tabela \"product\", procedure \"apply_discount_adjustment\", view: \"produtos_inativos\", etc.\n",
-    "        2- Usar underscore _ no lugar no espaço.\n",
-    "        3- Não usar acentos. Dê preferência para palavras em inglês.\n",
-    "        4- Tabelas e Procedures - não usar plural.\n",
-    "        \n",
-    "SQL commands UPPERCASE\n",
-    "tables, views,etc - table_name\n",
-    "\n",
-    "source: https://www.sqlstyle.guide/pt-br/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3 - DBs de exemplo para começar\n",
-    "\n",
-    "https://github.com/pleasereleaseme/ContosoUniversity/tree/master/ContosoUniversity.Database/dbo/Tables\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4 - Conceitos de Normalização\n",
-    "\n",
-    "https://www.sqlshack.com/what-is-database-normalization-in-sql-server/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5 - Tipos de dados\n",
-    "\n",
-    "#### https://docs.microsoft.com/pt-br/sql/t-sql/data-types/ntext-text-and-image-transact-sql?view=sql-server-ver15  \n",
-    "\n",
-    "<table  style=\"text-align:left;\">\n",
-    "    <tr>\n",
-    "        <th>Tipo de dados</th>\n",
-    "        <th style=\"text-align:left;\">Intervalo</th>\n",
-    "        <th>Armazenamento</th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td>bigint</td>\n",
-    "        <td>-2^63 (-9.223.372.036.854.775.808) a 2^63-1 (9.223.372.036.854.775.807)</td>\n",
-    "        <td>8 bytes</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td>int</td>\n",
-    "        <td>-2^31 (-2.147.483.648) a 2^31-1 (2.147.483.647)</td>\n",
-    "        <td>4 bytes</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td>smallint</td>\n",
-    "        <td>-2^15 (-32.768) a 2^15-1 (32.767)</td>\n",
-    "        <td>2 bytes</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td>tinyint</td>\n",
-    "        <td>0 a 255</td>\n",
-    "        <td>1 byte</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td>money</td>\n",
-    "        <td>-922,337,203,685,477.5808 to 922,337,203,685,477.5807 (-922,337,203,685,477.58\n",
-    "to 922,337,203,685,477.58</td>\n",
-    "        <td>8 bytes</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td>smallmoney</td>\n",
-    "        <td>- 214,748.3648 to 214,748.3647</td>\n",
-    "        <td>4 bytes</td>\n",
-    "    </tr>\n",
-    "    \n",
-    "</table>\n",
-    "\n",
-    "* Numéricos exatos  \n",
-    "    **bigint**  \n",
-    "    **numeric**  \n",
-    "    **bit**  \n",
-    "    smallint  \n",
-    "    **decimal**  \t\n",
-    "    smallmoney  \n",
-    "    **int**  \n",
-    "    tinyint  \n",
-    "    **money**  \t\n",
-    "</br>\n",
-    "* Numéricos aproximados  \n",
-    "    **float**  \n",
-    "    **real**  \n",
-    "  \n",
-    "* Data e hora  \n",
-    "    date  \n",
-    "    datetimeoffset  \n",
-    "    datetime2  \n",
-    "    smalldatetime  \n",
-    "    **datetime**  \n",
-    "    time  \n",
-    "    \n",
-    "* Cadeias de caracteres  \n",
-    "    **char**  \n",
-    "    **varchar**  \n",
-    "    **text**  \n",
-    "\n",
-    "* Cadeias de caracteres Unicode  \n",
-    "    **nchar**  \n",
-    "    **nvarchar**  \n",
-    "    ntext  \n",
-    "\n",
-    "* Cadeia de caracteres binária \n",
-    "    binary  \n",
-    "    varbinary  \n",
-    "    imagem  \n",
-    "    \n",
-    "* Outros tipos de dados  \n",
-    "    cursor  \n",
-    "    rowversion  \n",
-    "    hierarchyid  \n",
-    "    uniqueidentifier  \n",
-    "    sql_variant\txml  \n",
-    "    Tipos de geometria espacial  \t\n",
-    "    table  \n",
-    "    xml  \n",
-    "    NULL"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "#### Select  \n",
-    "Select Distinct  \n",
-    "Where  \n",
-    "And, Or, Not  \n",
-    "Order By  \n",
-    "Insert Into  \n",
-    "Null Values  \n",
-    "Update  \n",
-    "Delete  \n",
-    "Select Top  \n",
-    "Min and Max  \n",
-    "Count, Avg, Sum  \n",
-    "Like  \n",
-    "Wildcards  \n",
-    "In  \n",
-    "Between  \n",
-    "Aliases  \n",
-    "Joins  \n",
-    "Inner Join  \n",
-    "Left Join  \n",
-    "Right Join  \n",
-    "Full Join  \n",
-    "Self Join  \n",
-    "Union  \n",
-    "Group By  \n",
-    "Having  \n",
-    "Exists  \n",
-    "Any, All  \n",
-    "Select Into  \n",
-    "Insert Into Select  \n",
-    "Case  \n",
-    "Null Functions  \n",
-    "Stored Procedures  \n",
-    "Comments  \n",
-    "\n",
-    "#### Database  \n",
-    "Create DB  \n",
-    "Drop DB  \n",
-    "Backup DB  \n",
-    "Create Table  \n",
-    "Drop Table  \n",
-    "Alter Table  \n",
-    "Constraints  \n",
-    "Not Null  \n",
-    "Unique  \n",
-    "Primary Key  \n",
-    "Foreign Key  \n",
-    "Check  \n",
-    "Default  \n",
-    "Index  \n",
-    "Auto Increment  \n",
-    "Dates  \n",
-    "Views  \n",
-    "Injection  \n",
-    "Hosting  \n",
-    " \n",
-    "\n"
+    " \n"
    ]
   }
  ],
@@ -384,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
